--- a/estilo.css
+++ b/estilo.css
@@ -70,7 +70,16 @@ nav ul#menu-desktop li button:hover {
 
 nav ul#menu-mobile, nav div#menu-btn {
     display: none;
-}   
+}  
+
+header{
+  width: 100%;
+  height: 1px;
+  margin: 0 auto;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top center;
+}
 
 
 
