--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,12 @@
-
+button {
+  padding: ;
+  font-size: 16px;
+  background-color:transparent;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
 
 :root {
     --primary-color: #c7a17a;
